css changes. trying out some different looks. Need to figure out how to fix the white space

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,10 +11,6 @@ p {
   @apply mt-3;
 }
 
-a {
-  @apply text-pink-700;
-}
-
 /*Blog Post Cards - index*/
 .card {
   @apply flex;
